# rust-web-api

./: .env.example  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250221_075209_create_table_user.rs
src/: main.rs
src/api/: mod.rs  router.rs
src/api/config/: db.rs
src/api/entity/: user.rs
src/api/handler/: user.rs
src/api/model/: user.rs
src/api/routes/: user.rs
