[package]
name = "seaorm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }
actix-web = "4.9.0"
anyhow = "1.0.96"
dotenvy = "0.15.7"
futures = "0.3.31"
sea-orm = { version = "1.1.5", features = [
  "sqlx-mysql",
  "runtime-actix-native-tls",
  "macros",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.218"
serde_json = "1.0.139"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
validator = { version = "0.20.0", features = ["derive"] }
chrono = "0.4.39"
sea-orm-migration = "1.1.6"
